--- a/res/layout/activity_simple_list_view.xml
+++ b/res/layout/activity_simple_list_view.xml
@@ -6,12 +6,12 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity" >
+    tools:context=".SimpleListViewActivity" >
 
     <ListView
-        android:id="@+id/main_activity_list_view"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent" >
+        android:id="@+id/simple_list_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
     </ListView>
 
 </RelativeLayout>
